--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<h1>Hello</h1>
+
+<!--<h1>Hello</h1>-->
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Change Background Color</title>
+	<style>
+		body {
+			background-color: white;
+		}
+	</style>
+</head>
+<body>
+	<h1>Change Background Color</h1>
+	<p>Click on the button to change the background color of this page:</p>
+	<button onclick="changeColor()">Change color</button>
+	
+	<script>
+		function changeColor() {
+			document.body.style.backgroundColor = "pink";
+		}
+	</script>
+</body>
+</html>
