--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	
 	<script>
 		function changeColor() {
-			document.body.style.backgroundColor = "pink";
+			document.body.style.backgroundColor = "dark grey";
 		}
 	</script>
 </body>
