--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Change Background Color</title>
 	<style>
 		body {
-			background-color: white;
+			background-color: rgb(98, 48, 48);
 		}
 	</style>
 </head>
