--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
 			document.body.style.backgroundColor = "grey";
 		}
 	</script>
+	<img src="./images/riding bikes.png" alt="I like nature and riding bikes">
+
 </body>
 </html>
