--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html>
 <head>
 	<title>OneRaw Website</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 	<style>
 		body {
 			background-color: rgb(98, 48, 48);
@@ -20,7 +21,8 @@
 			document.body.style.backgroundColor = "grey";
 		}
 	</script>
-	<img src="./images/riding bikes.png" alt="I like nature and riding bikes">
+	<img src="./images/riding bikes.png" alt="My image">
+	<p>I like nature and riding bikes.</p>
 
 </body>
 </html>
