--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 	<title>OneRaw Website</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<style>
 		body {
 			background-color: rgb(98, 48, 48);
