--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<h1>Change Background Color</h1>
 	<p>Click on the button to change the background color of this page:</p>
-	<button onclick="changeColor()">Change color</button>
+	<button onclick="changeColor()">Change color &#10644 </button>
 	
 	<script>
 		function changeColor() {
