--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		}
 	</script>
 	<img src="./images/riding bikes.png" alt="My image">
-	<p>I like nature and riding bikes.</p>
+	<p>Hi, I like what computers can do.</p>
 
 </body>
 </html>
