--- a/index.html
+++ b/index.html
@@ -21,21 +21,9 @@
 		</section>
 
 		<section class="rsvp-form">
-			<form id="rsvp-form" action="submit_rsvp.php" method="POST">
-				<label for="name">Your Name and Lastname:</label>
-				<input type="text" id="full_name" name="full_name" required>
-
-				<label for="attendance">Will you be attending? </label>
-				<select id="attendance" name="attendance" required>
-					<option value="yes">Yes, we'll see you there!</option>
-					<option value="no">Sorry, I can't make it. Gotta feed the birds that day.</option>
-				</select>
-
-				<label for="accompanying">Who will accompany you?</label>
-				<input type="text" id="accompanying" name="accompanying">
-
-				<button type="submit">RSVP</button>
-			</form>
+			<iframe
+				src="https://docs.google.com/forms/d/e/1FAIpQLSdp91Aedgg2ksDgQrunttB_OSF7HwRGV_nDOuy34PpQQUy3cw/viewform?embedded=true"
+				width="640" height="758" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 		</section>
 	</div>
 </body>
