--- a/details.html
+++ b/details.html
@@ -16,7 +16,7 @@
         </header>
         <section>
             <img src="images/1.jpg" alt="Wedding Celebration" style="max-width: 100%; height: auto;">
-            <img src="images/bad photo.jpg" alt="Wedding Celebration" style="max-width: 100%; height: auto;">
+            <img src="images/2.jpg" alt="Wedding Celebration" style="max-width: 100%; height: auto;">
             <img src="images/3.jpg" alt="Wedding Celebration" style="max-width: 100%; height: auto;">
         </section>
     </div>
