--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 
 		<section class="rsvp-form">
 			<iframe
-				src="https://docs.google.com/forms/d/e/1FAIpQLSdp91Aedgg2ksDgQrunttB_OSF7HwRGV_nDOuy34PpQQUy3cw/viewform?embedded=true"
-				width="640" height="758" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+				src="https://script.google.com/macros/s/AKfycbwZIl29QC5lQ245tPg0eTPiOAb-QGIn3wWCiDsZ7HRItEp0RtpFijiXyS6Le_1ucQ/exec"
+				width="640" height="758" frameborder="0" marginheight="0" marginwidth="0">Loading…
+			</iframe>
 		</section>
 	</div>
 </body>
