--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 
 		<section class="rsvp-form">
 			<iframe
-				src="https://script.google.com/macros/s/AKfycbxXL31XCSo2Lmj_pe_tbmNUlAd0EWq1raoSKoukj0MReFSXuVXW238mSj5AEzFSo-gA/exec"
-				width="640" height="758" frameborder="0" marginheight="0" marginwidth="0">Loading…
-			</iframe>
+				src="https://docs.google.com/forms/d/e/1FAIpQLSdp91Aedgg2ksDgQrunttB_OSF7HwRGV_nDOuy34PpQQUy3cw/viewform?embedded=true"
+				width="640" height="1240" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 		</section>
 	</div>
 </body>
