Changed index more.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 		</section>
 
 		<section class="rsvp-form">
-			<iframe
-				src="https://docs.google.com/forms/d/e/1FAIpQLSdFV5HeYAMLUve7JD21PT-lxoX-sbRmPHywYif-iNb_ghT_aQ/viewform?embedded=true"
-				width="640" height="415" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+			<p> Place holder </p>
 		</section>
 	</div>
 </body>
