--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Wedding Invitation</title>
-	<link rel="stylesheet" href="Website_Styles.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 		</section>
 
 		<section class="rsvp-form">
-			<form id="rsvp-form" action="submit_rsvp.php" method="POST">
+			<form id="rsvp-form">
 				<label for="name">Your Name and Lastname:</label>
 				<input type="text" id="full_name" name="full_name" required>
 				<!--
