--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
 
 		<section class="invitation">
 			<p>We would love for you to celebrate our special day with us!</p>
-			<p>Please respond to our invitation below.</p>
 		</section>
 
 		<section class="rsvp-form">
 			<form id="rsvp-form">
-				<label for="name">Your Name and Lastname:</label>
+				<label for="name">Please Enter Your Name And Last Name Bellow:</label>
 				<input type="text" id="full_name" name="full_name" required>
 				<!--
 				<label for="attendance">Will you be attending? </label>
