--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 		<section class="rsvp-form">
 			<form id="rsvp-form">
-				<label for="name">Please Enter Your Name And Last Name Bellow:</label>
+				<label for="name">Please enter your first and last name below:</label>
 				<input type="text" id="full_name" name="full_name" required>
 				<!--
 				<label for="attendance">Will you be attending? </label>
@@ -33,13 +33,13 @@
 				<label for="accompanying">Who will accompany you?</label>
 				<input type="text" id="accompanying" name="accompanying">
 				-->
-				<button type="submit">RSVP</button>
+				<button type="submit">ENTER THE SITE</button>
 			</form>
 		</section>
 	</div>
 
 	<script>
-		// Event listener to the RSVP form submission
+
 		document.getElementById("rsvp-form").addEventListener("submit", function (event) {
 			event.preventDefault();
 
