--- a/details.html
+++ b/details.html
@@ -50,7 +50,8 @@
                 let iframe = document.querySelector("iframe");
                 if (iframe) {
                     let formURL = "https://docs.google.com/forms/d/e/1FAIpQLSdp91Aedgg2ksDgQrunttB_OSF7HwRGV_nDOuy34PpQQUy3cw/viewform?embedded=true";
-                    iframe.src = formURL + `&entry.full_name=${encodeURIComponent(fullName)}`; // Replace 123456789 with actual field entry ID
+                    let entryID = "123456789"; // PLACE HOLDER
+                    iframe.src = formURL + `&entry.${entryID}=${encodeURIComponent(fullName)}`;
                 }
             }
         });
