Added error checking.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 			var fullName = document.getElementById("full_name").value;
 
-			if (!fullName || !isNan(fullName) || !/^[a-zA-Z\s]*$/.test(fullName)) {
+			if (!fullName || !isNaN(fullName) || !/^[a-zA-Z\s]*$/.test(fullName)) {
 				alert("❌ Please enter a valid name.");
 				return;
 			}
