--- a/index.html
+++ b/index.html
@@ -41,16 +41,17 @@
 	<script>
 
 		document.getElementById("rsvp-form").addEventListener("submit", function (event) {
+
 			event.preventDefault();
 
-			var fullName = document.getElementById("full_name").value;
+			var fullName = document.getElementById("full_name").value.trim();
 
-			if (!fullName || !isNaN(fullName) || !/^[a-zA-Z\s]*$/.test(fullName)) {
+			if (!fullName || !/^[a-zA-Z\s]+$/.test(fullName)) {
 				alert("❌ Please enter a valid name.");
 				return;
 			}
 
-			fullName = fullName.toUpperCase();
+			fullName = fullName.toLowerCase();
 
 			var url = "https://script.google.com/macros/s/AKfycbzCsT99bz7RvJwT8-nptdZEx3A8M6tlAVNlAcZ-juCkXgj_PVfBBW3ua4-iFXg5JoOZ/exec";
 			var params = {
