Edited error checking.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				return;
 			}
 
-			fullName = fullName.toLowerCase();
+			//fullName = fullName.toLowerCase();
 
 			var url = "https://script.google.com/macros/s/AKfycbzCsT99bz7RvJwT8-nptdZEx3A8M6tlAVNlAcZ-juCkXgj_PVfBBW3ua4-iFXg5JoOZ/exec";
 			var params = {
