--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 				}
 			*/
 
-			//fullName = fullName.toLowerCase();
+			fullName = fullName.toLowerCase();
+			alert("Full Name: " + fullName);
 
 			var url = "https://script.google.com/macros/s/AKfycbydNVyzI8p0uQTGNBFMw5PlUkFjfqB2eEEU4fNQSG99QRvi8P9PBGEG6SnXNz-npwyB/exec";
 			var params = {
