--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 		document.getElementById("rsvp-form").addEventListener("submit", function (event) {
 			event.preventDefault();
 
-			var fullName = document.getElementById("full_name").value;
+			var fullName = document.getElementById("full_name").value.trim();
 			/*
-				if (!fullName || !/^[a-zA-Z\s]+$/.test(fullName)) {
-					alert("❌ Please enter a valid name.");
-					return;
-				}
-			*/
+						if (!fullName || !/^[a-zA-Z\s]+$/.test(fullName)) {
+							alert("❌ Please enter a valid name.");
+							return;
+						}*/
+
 
 			fullName = fullName.toLowerCase();
 			alert("Full Name: " + fullName);
