--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
 				return;
 			}
 
-
 			fullName = fullName.toLowerCase();
-			alert("Full Name: " + fullName);
+			//alert("Full Name: " + fullName);
 
 			var url = "https://script.google.com/macros/s/AKfycbzTwTc3leYHiXz2RUQNHXrbaSVq3EjxbIeXgpBp_Dbz9jLWXPu9FHpeB-Q3fH_spEfu/exec";
 			var params = {
