--- a/details.html
+++ b/details.html
@@ -17,13 +17,14 @@
 
         <section class="invitation">
             <p>We would love for you to celebrate our special day with us!</p>
-            <p>Please respond to our invitation below.</p>
+            <p>Please respond to our invitation below & <br></p>>
+            <p>See the bottom of the page for details</p>
         </section>
 
         <section class="rsvp-form">
             <iframe
                 src="https://docs.google.com/forms/d/e/1FAIpQLSdp91Aedgg2ksDgQrunttB_OSF7HwRGV_nDOuy34PpQQUy3cw/viewform?embedded=true"
-                width="640" height="755" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                width="640" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </section>
     </div>
 
@@ -37,7 +38,7 @@
             <img src="images/3.jpg" alt="Wedding Celebration" style="max-width: 100%; height: auto;">
         </section>
     </div>
-
+    <!--
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             function getQueryParam(param) {
@@ -56,6 +57,7 @@
             }
         });
     </script>
+    -->
 
 
 </body>
