--- a/details.html
+++ b/details.html
@@ -17,8 +17,10 @@
 
         <section class="invitation">
             <p>We would love for you to celebrate our special day with us!</p>
-            <p>Please respond to our invitation below & <br></p>>
-            <p>See the bottom of the page for details</p>
+            <p>Please respond to our invitation below
+                <br>& <br>
+                see the <strong>bottom</strong> of the page <strong>for details</strong>
+            </p>
         </section>
 
         <section class="rsvp-form">
