--- a/details.html
+++ b/details.html
@@ -19,7 +19,7 @@
             <p>We would love for you to celebrate our special day with us!</p>
             <p>Please respond to our invitation below
                 <br>& <br>
-                see the <strong>bottom</strong> of the page <strong>for details</strong>
+                See the <strong>bottom</strong> of the page <strong>for details</strong>
             </p>
         </section>
 
