--- a/details.html
+++ b/details.html
@@ -26,7 +26,7 @@
         <section class="rsvp-form">
             <iframe
                 src="https://docs.google.com/forms/d/e/1FAIpQLSdp91Aedgg2ksDgQrunttB_OSF7HwRGV_nDOuy34PpQQUy3cw/viewform?embedded=true"
-                width="640" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </section>
     </div>
 
