--- a/details.html
+++ b/details.html
@@ -26,7 +26,8 @@
         <section class="rsvp-form">
             <iframe
                 src="https://docs.google.com/forms/d/e/1FAIpQLSdp91Aedgg2ksDgQrunttB_OSF7HwRGV_nDOuy34PpQQUy3cw/viewform?embedded=true"
-                width="660" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                style="width: 100%; max-width: 600px; height: 800px; border: none; border-radius: 8px;">
+            </iframe>
         </section>
     </div>
 
