--- a/details.html
+++ b/details.html
@@ -37,8 +37,9 @@
         </header>
         <section>
             <img src="images/1.jpg" alt="Wedding Celebration" style="max-width: 100%; height: auto;">
-            <img src="images/2.png" alt="Wedding Celebration" style="max-width: 100%; height: auto;">
+            <img src="images/2.jpg" alt="Wedding Celebration" style="max-width: 100%; height: auto;">
             <img src="images/3.jpg" alt="Wedding Celebration" style="max-width: 100%; height: auto;">
+            <img src="images/4.jpg" alt="Wedding Celebration" style="max-width: 100%; height: auto;">
         </section>
     </div>
     <!--
