--- a/details.html
+++ b/details.html
@@ -16,11 +16,7 @@
         </header>
 
         <section class="invitation">
-            <p>We would love for you to celebrate our special day with us!</p>
-            <p>Please respond to our invitation below
-                <br>& <br>
-                See the <strong>bottom</strong> of the page <strong>for details</strong>
-            </p>
+            <p>Please respond to our invitation below.</p>
         </section>
 
         <section class="rsvp-form">
